--- a/po/pl.po
+++ b/po/pl.po
@@ -4,7 +4,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2025-06-30 16:42-0400\n"
+"POT-Creation-Date: 2025-07-01 13:02-0400\n"
 "PO-Revision-Date: 2025-07-01 23:53+0000\n"
 "Last-Translator: T K <konto2y5@gmail.com>\n"
 "Language-Team: Polish <https://hosted.weblate.org/projects/protonplus/"
@@ -58,6 +58,15 @@ msgstr "_O ProtonPlus"
 #: src/widgets/window.vala:60
 msgid "Main Menu"
 msgstr "Menu główne"
+
+#: src/widgets/window.vala:65 src/models/launchers/bottles.vala:29
+#: src/models/launchers/steam.vala:42
+msgid "Runners"
+msgstr "Uruchamiacze"
+
+#: src/widgets/window.vala:66
+msgid "Games"
+msgstr ""
 
 #: src/widgets/runners/description-dialog.vala:14
 msgid "More information"
@@ -294,7 +303,8 @@ msgid "Unsuported launcher"
 msgstr "Nieobsługiwany launcher"
 
 #: src/widgets/games/games-box.vala:170
-msgid "is currently not supported."
+#, c-format
+msgid "%s is currently not supported."
 msgstr ""
 
 #: src/widgets/games/games-box.vala:170
@@ -338,11 +348,12 @@ msgid "Mass edit"
 msgstr "Edycja zbiorowa"
 
 #: src/widgets/games/mass-edit-dialog.vala:20
-msgid "game selected"
+msgid "1 game selected"
 msgstr ""
 
 #: src/widgets/games/mass-edit-dialog.vala:20
-msgid "games selected"
+#, c-format
+msgid "%u games selected"
 msgstr ""
 
 #: src/widgets/games/mass-edit-dialog.vala:22
@@ -388,10 +399,11 @@ msgid ""
 msgstr ""
 
 #: src/widgets/games/mass-edit-dialog.vala:147
+#, fuzzy
 msgid ""
 "When trying to change the compatibility tool/launch options of the selected "
-"games an error occured for the following games"
-msgstr ""
+"games an error occured for the following games:"
+msgstr "Podczas próby zmiany narzędzia zgodności %s wystąpił błąd."
 
 #: src/widgets/games/shortcut-button.vala:23
 #: src/widgets/games/shortcut-button.vala:28
@@ -514,10 +526,6 @@ msgstr "Wybierz żądane narzędzie zgodności"
 #, c-format
 msgid "When trying to change the compatibility tool of %s an error occured."
 msgstr "Podczas próby zmiany narzędzia zgodności %s wystąpił błąd."
-
-#: src/models/launchers/bottles.vala:29 src/models/launchers/steam.vala:42
-msgid "Runners"
-msgstr "Uruchamiacze"
 
 #: src/models/launchers/bottles.vala:29 src/models/launchers/hgl.vala:32
 #: src/models/launchers/lutris.vala:36
@@ -645,6 +653,22 @@ msgstr ""
 msgid ""
 "Steam tool for easy, graphical configuration of your other compatibility "
 "tools for both Windows games and native Linux games."
+msgstr ""
+
+#: data/ui/gtk/help-overlay.ui:11
+msgctxt "shortcut window"
+msgid "General"
+msgstr ""
+
+#: data/ui/gtk/help-overlay.ui:14
+#, fuzzy
+msgctxt "shortcut window"
+msgid "Show Shortcuts"
+msgstr "_Skróty klawiszowe"
+
+#: data/ui/gtk/help-overlay.ui:20
+msgctxt "shortcut window"
+msgid "Quit"
 msgstr ""
 
 #, fuzzy
