--- a/po/it.po
+++ b/po/it.po
@@ -2,7 +2,7 @@
 msgid ""
 msgstr ""
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2025-06-30 16:42-0400\n"
+"POT-Creation-Date: 2025-07-01 13:02-0400\n"
 "PO-Revision-Date: 2024-08-19 10:09+0000\n"
 "Last-Translator: Lize58 <pasquale.borrelli05@outlook.it>\n"
 "Language-Team: Italian <https://hosted.weblate.org/projects/protonplus/"
@@ -57,6 +57,15 @@ msgstr ""
 #: src/widgets/window.vala:60
 msgid "Main Menu"
 msgstr ""
+
+#: src/widgets/window.vala:65 src/models/launchers/bottles.vala:29
+#: src/models/launchers/steam.vala:42
+msgid "Runners"
+msgstr "Esecutori"
+
+#: src/widgets/window.vala:66
+msgid "Games"
+msgstr "Giochi"
 
 #: src/widgets/runners/description-dialog.vala:14
 #, fuzzy
@@ -301,7 +310,8 @@ msgid "Unsuported launcher"
 msgstr "Pulisci lanciatore"
 
 #: src/widgets/games/games-box.vala:170
-msgid "is currently not supported."
+#, c-format
+msgid "%s is currently not supported."
 msgstr ""
 
 #: src/widgets/games/games-box.vala:170
@@ -341,11 +351,12 @@ msgid "Mass edit"
 msgstr ""
 
 #: src/widgets/games/mass-edit-dialog.vala:20
-msgid "game selected"
+msgid "1 game selected"
 msgstr ""
 
 #: src/widgets/games/mass-edit-dialog.vala:20
-msgid "games selected"
+#, c-format
+msgid "%u games selected"
 msgstr ""
 
 #: src/widgets/games/mass-edit-dialog.vala:22
@@ -395,7 +406,7 @@ msgstr ""
 #, fuzzy
 msgid ""
 "When trying to change the compatibility tool/launch options of the selected "
-"games an error occured for the following games"
+"games an error occured for the following games:"
 msgstr "Strumento di compatibilità Steam per l'esecuzione di giochi Windows"
 
 #: src/widgets/games/shortcut-button.vala:23
@@ -525,10 +536,6 @@ msgstr "Strumento di compatibilità"
 #, c-format
 msgid "When trying to change the compatibility tool of %s an error occured."
 msgstr ""
-
-#: src/models/launchers/bottles.vala:29 src/models/launchers/steam.vala:42
-msgid "Runners"
-msgstr "Esecutori"
 
 #: src/models/launchers/bottles.vala:29 src/models/launchers/hgl.vala:32
 #: src/models/launchers/lutris.vala:36
@@ -663,6 +670,22 @@ msgid ""
 "Steam tool for easy, graphical configuration of your other compatibility "
 "tools for both Windows games and native Linux games."
 msgstr ""
+
+#: data/ui/gtk/help-overlay.ui:11
+msgctxt "shortcut window"
+msgid "General"
+msgstr ""
+
+#: data/ui/gtk/help-overlay.ui:14
+msgctxt "shortcut window"
+msgid "Show Shortcuts"
+msgstr ""
+
+#: data/ui/gtk/help-overlay.ui:20
+#, fuzzy
+msgctxt "shortcut window"
+msgid "Quit"
+msgstr "Esci"
 
 #, fuzzy
 #~ msgid "Extra"
@@ -810,14 +833,8 @@ msgstr ""
 #~ msgid "Documentation"
 #~ msgstr "Documentazione"
 
-#~ msgid "Quit"
-#~ msgstr "Esci"
-
 #~ msgid "Tools"
 #~ msgstr "Strumenti"
-
-#~ msgid "Games"
-#~ msgstr "Giochi"
 
 #~ msgid "Notifications"
 #~ msgstr "Notifiche"
