--- a/po/pt.po
+++ b/po/pt.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2025-06-30 16:42-0400\n"
+"POT-Creation-Date: 2025-07-01 13:02-0400\n"
 "PO-Revision-Date: 2025-06-23 23:06+0000\n"
 "Last-Translator: Cirnos <cirnos@tuta.io>\n"
 "Language-Team: Portuguese <https://hosted.weblate.org/projects/protonplus/"
@@ -60,6 +60,15 @@ msgstr "_Sobre ProtonPlus"
 #: src/widgets/window.vala:60
 msgid "Main Menu"
 msgstr "Menu Principal"
+
+#: src/widgets/window.vala:65 src/models/launchers/bottles.vala:29
+#: src/models/launchers/steam.vala:42
+msgid "Runners"
+msgstr "Executadores"
+
+#: src/widgets/window.vala:66
+msgid "Games"
+msgstr "Jogos"
 
 #: src/widgets/runners/description-dialog.vala:14
 msgid "More information"
@@ -301,8 +310,8 @@ msgid "Unsuported launcher"
 msgstr "Limpar inicializador"
 
 #: src/widgets/games/games-box.vala:170
-#, fuzzy
-msgid "is currently not supported."
+#, fuzzy, c-format
+msgid "%s is currently not supported."
 msgstr "%s não é compatível"
 
 #: src/widgets/games/games-box.vala:170
@@ -342,11 +351,13 @@ msgid "Mass edit"
 msgstr ""
 
 #: src/widgets/games/mass-edit-dialog.vala:20
-msgid "game selected"
+#, fuzzy
+msgid "1 game selected"
 msgstr "jogo selecionado"
 
 #: src/widgets/games/mass-edit-dialog.vala:20
-msgid "games selected"
+#, fuzzy, c-format
+msgid "%u games selected"
 msgstr "jogos selecionados"
 
 #: src/widgets/games/mass-edit-dialog.vala:22
@@ -396,9 +407,10 @@ msgstr ""
 "Ative todas opções que deseja que a edição em massa leve em consideração."
 
 #: src/widgets/games/mass-edit-dialog.vala:147
+#, fuzzy
 msgid ""
 "When trying to change the compatibility tool/launch options of the selected "
-"games an error occured for the following games"
+"games an error occured for the following games:"
 msgstr ""
 "Ocorreu um erro ao tentar mudar a ferramenta de compatibilidade/opções de "
 "inicialização dos jogos selecionados para os seguintes jogos"
@@ -525,10 +537,6 @@ msgstr "Selecione sua ferramenta de compatibilidade desejada"
 #, c-format
 msgid "When trying to change the compatibility tool of %s an error occured."
 msgstr "Ocorreu um erro ao tentar mudar a ferramente de compatibilidade de %s."
-
-#: src/models/launchers/bottles.vala:29 src/models/launchers/steam.vala:42
-msgid "Runners"
-msgstr "Executadores"
 
 #: src/models/launchers/bottles.vala:29 src/models/launchers/hgl.vala:32
 #: src/models/launchers/lutris.vala:36
@@ -657,6 +665,23 @@ msgid ""
 msgstr ""
 "Ferramenta do Steam para configuração fácil e gráfica de suas outras "
 "ferramentas de compatibilidade para jogos de Windows e nativos Linux."
+
+#: data/ui/gtk/help-overlay.ui:11
+msgctxt "shortcut window"
+msgid "General"
+msgstr ""
+
+#: data/ui/gtk/help-overlay.ui:14
+#, fuzzy
+msgctxt "shortcut window"
+msgid "Show Shortcuts"
+msgstr "_Atalhos de Teclado"
+
+#: data/ui/gtk/help-overlay.ui:20
+#, fuzzy
+msgctxt "shortcut window"
+msgid "Quit"
+msgstr "Sair"
 
 #~ msgid "Library"
 #~ msgstr "Biblioteca"
@@ -823,14 +848,8 @@ msgstr ""
 #~ msgid "Documentation"
 #~ msgstr "Documentação"
 
-#~ msgid "Quit"
-#~ msgstr "Sair"
-
 #~ msgid "Tools"
 #~ msgstr "Ferramentas"
-
-#~ msgid "Games"
-#~ msgstr "Jogos"
 
 #~ msgid "Notifications"
 #~ msgstr "Notificações"
