--- a/po/ru.po
+++ b/po/ru.po
@@ -4,7 +4,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2025-06-30 16:42-0400\n"
+"POT-Creation-Date: 2025-07-01 13:02-0400\n"
 "PO-Revision-Date: 2024-10-12 18:02+0500\n"
 "Last-Translator: izmyname <vi-mcmxcv@proton.me>\n"
 "Language-Team: Russian <https://hosted.weblate.org/projects/protonplus/"
@@ -61,6 +61,15 @@ msgstr ""
 #: src/widgets/window.vala:60
 msgid "Main Menu"
 msgstr ""
+
+#: src/widgets/window.vala:65 src/models/launchers/bottles.vala:29
+#: src/models/launchers/steam.vala:42
+msgid "Runners"
+msgstr "Инструменты"
+
+#: src/widgets/window.vala:66
+msgid "Games"
+msgstr "Игры"
 
 #: src/widgets/runners/description-dialog.vala:14
 #, fuzzy
@@ -312,8 +321,8 @@ msgid "Unsuported launcher"
 msgstr "Очистить лаунчер"
 
 #: src/widgets/games/games-box.vala:170
-#, fuzzy
-msgid "is currently not supported."
+#, fuzzy, c-format
+msgid "%s is currently not supported."
 msgstr "%s не поддерживается"
 
 #: src/widgets/games/games-box.vala:170
@@ -353,11 +362,12 @@ msgid "Mass edit"
 msgstr ""
 
 #: src/widgets/games/mass-edit-dialog.vala:20
-msgid "game selected"
+msgid "1 game selected"
 msgstr ""
 
 #: src/widgets/games/mass-edit-dialog.vala:20
-msgid "games selected"
+#, c-format
+msgid "%u games selected"
 msgstr ""
 
 #: src/widgets/games/mass-edit-dialog.vala:22
@@ -407,7 +417,7 @@ msgstr ""
 #, fuzzy
 msgid ""
 "When trying to change the compatibility tool/launch options of the selected "
-"games an error occured for the following games"
+"games an error occured for the following games:"
 msgstr "Инструмент совместимости Steam для запуска игр для Windows"
 
 #: src/widgets/games/shortcut-button.vala:23
@@ -537,10 +547,6 @@ msgstr "Инструмент совместимости"
 msgid "When trying to change the compatibility tool of %s an error occured."
 msgstr ""
 
-#: src/models/launchers/bottles.vala:29 src/models/launchers/steam.vala:42
-msgid "Runners"
-msgstr "Инструменты"
-
 #: src/models/launchers/bottles.vala:29 src/models/launchers/hgl.vala:32
 #: src/models/launchers/lutris.vala:36
 msgid "Compatibility tools for running Windows software on Linux."
@@ -667,6 +673,22 @@ msgid ""
 msgstr ""
 "Инструмент Steam для простой графической настройки других инструментов "
 "совместимости как для игр под Windows, так и для игр под Linux."
+
+#: data/ui/gtk/help-overlay.ui:11
+msgctxt "shortcut window"
+msgid "General"
+msgstr ""
+
+#: data/ui/gtk/help-overlay.ui:14
+msgctxt "shortcut window"
+msgid "Show Shortcuts"
+msgstr ""
+
+#: data/ui/gtk/help-overlay.ui:20
+#, fuzzy
+msgctxt "shortcut window"
+msgid "Quit"
+msgstr "Выход"
 
 #, fuzzy
 #~ msgid "Show game library"
@@ -822,14 +844,8 @@ msgstr ""
 #~ msgid "Documentation"
 #~ msgstr "Документация"
 
-#~ msgid "Quit"
-#~ msgstr "Выход"
-
 #~ msgid "Tools"
 #~ msgstr "Инструменты"
-
-#~ msgid "Games"
-#~ msgstr "Игры"
 
 #~ msgid "Notifications"
 #~ msgstr "Уведомления"
