--- a/po/zh.po
+++ b/po/zh.po
@@ -5,7 +5,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2025-06-30 16:42-0400\n"
+"POT-Creation-Date: 2025-07-01 13:02-0400\n"
 "PO-Revision-Date: 2025-03-12 09:23+0800\n"
 "Last-Translator: Zemin Ha <ruojiner@hotmail.com>\n"
 "Language-Team: Chinese <kde-i18n-doc@kde.org>\n"
@@ -57,6 +57,15 @@ msgstr "_关于 ProtonPlus"
 #: src/widgets/window.vala:60
 msgid "Main Menu"
 msgstr "主菜单"
+
+#: src/widgets/window.vala:65 src/models/launchers/bottles.vala:29
+#: src/models/launchers/steam.vala:42
+msgid "Runners"
+msgstr "启动器"
+
+#: src/widgets/window.vala:66
+msgid "Games"
+msgstr "游戏"
 
 #: src/widgets/runners/description-dialog.vala:14
 msgid "More information"
@@ -302,8 +311,8 @@ msgid "Unsuported launcher"
 msgstr "清除启动器"
 
 #: src/widgets/games/games-box.vala:170
-#, fuzzy
-msgid "is currently not supported."
+#, fuzzy, c-format
+msgid "%s is currently not supported."
 msgstr "%s 不受支持"
 
 #: src/widgets/games/games-box.vala:170
@@ -343,11 +352,12 @@ msgid "Mass edit"
 msgstr ""
 
 #: src/widgets/games/mass-edit-dialog.vala:20
-msgid "game selected"
+msgid "1 game selected"
 msgstr ""
 
 #: src/widgets/games/mass-edit-dialog.vala:20
-msgid "games selected"
+#, c-format
+msgid "%u games selected"
 msgstr ""
 
 #: src/widgets/games/mass-edit-dialog.vala:22
@@ -397,7 +407,7 @@ msgstr ""
 #, fuzzy
 msgid ""
 "When trying to change the compatibility tool/launch options of the selected "
-"games an error occured for the following games"
+"games an error occured for the following games:"
 msgstr "用于运行WIndows游戏的Steam兼容性工具"
 
 #: src/widgets/games/shortcut-button.vala:23
@@ -529,10 +539,6 @@ msgstr "兼容性工具"
 msgid "When trying to change the compatibility tool of %s an error occured."
 msgstr ""
 
-#: src/models/launchers/bottles.vala:29 src/models/launchers/steam.vala:42
-msgid "Runners"
-msgstr "启动器"
-
 #: src/models/launchers/bottles.vala:29 src/models/launchers/hgl.vala:32
 #: src/models/launchers/lutris.vala:36
 msgid "Compatibility tools for running Windows software on Linux."
@@ -637,6 +643,23 @@ msgid ""
 msgstr ""
 "Steam 工具，用于轻松、图形化地配置您的其他兼容性 Windows 游戏和原生 Linux 游"
 "戏的工具"
+
+#: data/ui/gtk/help-overlay.ui:11
+msgctxt "shortcut window"
+msgid "General"
+msgstr ""
+
+#: data/ui/gtk/help-overlay.ui:14
+#, fuzzy
+msgctxt "shortcut window"
+msgid "Show Shortcuts"
+msgstr "_键盘快捷方式"
+
+#: data/ui/gtk/help-overlay.ui:20
+#, fuzzy
+msgctxt "shortcut window"
+msgid "Quit"
+msgstr "退出"
 
 #, fuzzy
 #~ msgid "Extra"
@@ -793,14 +816,8 @@ msgstr ""
 #~ msgid "Documentation"
 #~ msgstr "文档"
 
-#~ msgid "Quit"
-#~ msgstr "退出"
-
 #~ msgid "Tools"
 #~ msgstr "工具"
-
-#~ msgid "Games"
-#~ msgstr "游戏"
 
 #~ msgid "Notifications"
 #~ msgstr "通知"
