--- a/po/de.po
+++ b/po/de.po
@@ -7,7 +7,7 @@ msgstr ""
 "Project-Id-Version: com.vysp3r.ProtonPlus\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2025-07-01 13:02-0400\n"
-"PO-Revision-Date: 2025-06-30 22:17+0200\n"
+"PO-Revision-Date: 2025-07-02 15:08+0200\n"
 "Last-Translator: Christian Lauinger <christian@lauinger-clan.de>\n"
 "Language-Team: German <https://hosted.weblate.org/projects/protonplus/"
 "protonplus/de/>\n"
@@ -68,7 +68,7 @@ msgstr "Ausführungswerkzeuge"
 
 #: src/widgets/window.vala:66
 msgid "Games"
-msgstr ""
+msgstr "Spiele"
 
 #: src/widgets/runners/description-dialog.vala:14
 msgid "More information"
@@ -310,9 +310,9 @@ msgid "Unsuported launcher"
 msgstr "Nicht unterstützer Starter"
 
 #: src/widgets/games/games-box.vala:170
-#, fuzzy, c-format
+#, c-format
 msgid "%s is currently not supported."
-msgstr "wird aktuell nicht unterstützt."
+msgstr "%s wird aktuell nicht unterstützt."
 
 #: src/widgets/games/games-box.vala:170
 msgid ""
@@ -353,14 +353,13 @@ msgid "Mass edit"
 msgstr "Massenbearbeitung"
 
 #: src/widgets/games/mass-edit-dialog.vala:20
-#, fuzzy
 msgid "1 game selected"
-msgstr "Spiel ausgewählt"
+msgstr "1 Spiel ausgewählt"
 
 #: src/widgets/games/mass-edit-dialog.vala:20
-#, fuzzy, c-format
+#, c-format
 msgid "%u games selected"
-msgstr "Spiele ausgewählt"
+msgstr "%u Spiele ausgewählt"
 
 #: src/widgets/games/mass-edit-dialog.vala:22
 #: src/widgets/games/launch-options-dialog.vala:14
@@ -410,13 +409,12 @@ msgstr ""
 "werden sollen."
 
 #: src/widgets/games/mass-edit-dialog.vala:147
-#, fuzzy
 msgid ""
 "When trying to change the compatibility tool/launch options of the selected "
 "games an error occured for the following games:"
 msgstr ""
 "Beim Versuch, das Kompatibilitätstool/die Startoptionen der ausgewählten "
-"Spiele zu ändern, trat bei den folgenden Spielen ein Fehler auf"
+"Spiele zu ändern, trat bei den folgenden Spielen ein Fehler auf:"
 
 #: src/widgets/games/shortcut-button.vala:23
 #: src/widgets/games/shortcut-button.vala:28
@@ -676,18 +674,17 @@ msgstr ""
 #: data/ui/gtk/help-overlay.ui:11
 msgctxt "shortcut window"
 msgid "General"
-msgstr ""
+msgstr "Allgemein"
 
 #: data/ui/gtk/help-overlay.ui:14
-#, fuzzy
 msgctxt "shortcut window"
 msgid "Show Shortcuts"
-msgstr "_Tastenkombinationen"
+msgstr "Tastenkombinationen anzeigen"
 
 #: data/ui/gtk/help-overlay.ui:20
 msgctxt "shortcut window"
 msgid "Quit"
-msgstr ""
+msgstr "Beenden"
 
 #~ msgid "Library"
 #~ msgstr "Bibliothek"
